--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
           <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
-            <li><a href="#">Price</a></li>
-            <li><a href="#">Times</a></li>
+            <li><a href="#">Tickets and Locations</a></li>
+            <li><a href="#">Saftey</a></li>
           </ul>
         </nav>
       </header>
