--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   
       <footer>
-        <p>&copy;2020 C.D. Palmer, Exodus Black</p>
+        <p>&copy;2020 C.D. Palmer, Exodus Black Inc</p>
       </footer>
     </div>
   </body>
