Added css for main page.

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
    <title>Exodus Black</title>
+   <link rel = "stylesheet" href = "index.css" />
   </head>
 
   <body>
     <div>
       <header>
         <h1>Exodus Black</h1>
-
         <nav>
           <ul>
             <li><a href="#">Home</a></li>
@@ -19,7 +19,9 @@
         </nav>
       </header>
     
-   
+    <main>
+      <p>The newest ship to leave the planet! Join us to travel to the worlds of our solar system.</p>
+    </main>
 
   
       <footer>
