change to href and styles

--- a/index.html
+++ b/index.html
@@ -12,15 +12,13 @@
         <nav>
           <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Tickets and Locations</a></li>
-            <li><a href="#">Saftey</a></li>
+            <li><a href="#">Tickets</a></li>
           </ul>
         </nav>
       </header>
     
     <main>
-      <p>The newest ship to leave the planet! Join us to travel to the worlds of our solar system.</p>
+      <p>The newest ship to leave the planet! Join us on our mission to colonize Mars!</p>
     </main>
 
   
