--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
           <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">Tickets</a></li>
+            <li><a href="#">About</a></li>
           </ul>
         </nav>
       </header>
