--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <li><a href="#">About</a></li>
           </ul>
         </nav>
+        <!--<img src="Images/Stars in the sky.jpg" alt="Stars in the night sky" -->
       </header>
     
     <main>
