Additions from class. add nav for first media querry

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
     
     <main>
       <p>The newest ship to leave the planet! Join us on our mission to colonize Mars!</p>
+      <p>The newest ships to make travel safe!</p>
+      <p>Everything you could need for your gettaway to another planet.</p>
+      <p>“I believe that space travel will one day become as common as airline travel is today.</p> 
+      <p>“We choose to go to the moon in this decade and do the other things, not because they are easy, but because they are hard.– John F. Kennedy</p>
+        
     </main>
 
   
