--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <nav>
           <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="#">Tickets</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="C:\Users\makut\Documents\Code Louisville Project\The-Exodus-Black\tickets.css">Tickets</a></li>
+            <li><a href="C:\Users\makut\Documents\Code Louisville Project\The-Exodus-Black\about.html">About</a></li>
           </ul>
         </nav>
         <!--<img src="Images/Stars in the sky.jpg" alt="Stars in the night sky" -->
