fixed link to css instead of html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
           <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="C:\Users\makut\Documents\Code Louisville Project\The-Exodus-Black\tickets.css">Tickets</a></li>
+            <li><a href="C:\Users\makut\Documents\Code Louisville Project\The-Exodus-Black\tickets.html">Tickets</a></li>
             <li><a href="C:\Users\makut\Documents\Code Louisville Project\The-Exodus-Black\about.html">About</a></li>
           </ul>
         </nav>
