--- a/about.html
+++ b/about.html
@@ -16,16 +16,50 @@
             <li><a href="#">About</a></li>
           </ul>
         </nav>
-        <!--<img src="Images/Stars in the sky.jpg" alt="Stars in the night sky" -->
       </header>
     
     <main>
-      <p>carassol here</p>
+      <!-- Slideshow container -->
+     <div class="slideshow-container">
+
+       <!-- Full-width images with number and caption text -->
+        <div class="mySlides fade">
+         <div class="numbertext">1 / 3</div>
+         <img src="Images/Stars in the sky.jpg" style="width:100%" alt="Stars in the night sky">
+         <div class="text">Our Sand Box</div>
+        </div>
+
+        <div class="mySlides fade">
+         <div class="numbertext">2 / 3</div>
+         <img src="Images/Shuttle Launch.jpg" style="width:100%" alt="Launch of a space shuttle">
+         <div class="text">Our History of Flight</div>
+        </div>
+
+        <div class="mySlides fade">
+         <div class="numbertext">3 / 3</div>
+         <img src="Images/Stars in the sky.jpg" style="width:100%" alt="Stars in the sky">
+         <div class="text">Our Goal</div>
+        </div>
+
+         <!-- Next and previous buttons -->
+         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+         <a class="next" onclick="plusSlides(1)">&#10095;</a>
+     </div>
+<br>
+
+      <!-- The dots/circles -->
+      <div style="text-align:center">
+       <span class="dot" onclick="currentSlide(1)"></span>
+       <span class="dot" onclick="currentSlide(2)"></span>
+       <span class="dot" onclick="currentSlide(3)"></span>
+      </div>
+
     </main>
 
   
       <footer>
         <p>&copy;2020 C.D. Palmer, Exodus Black</p>
+        <script src="about.js"></script>
       </footer>
     </div>
   </body>
