--- a/about.html
+++ b/about.html
@@ -24,22 +24,28 @@
 
        <!-- Full-width images with number and caption text -->
         <div class="mySlides fade">
-         <div class="numbertext">1 / 3</div>
+         <div class="numbertext">1 / 4</div>
          <img src="Images/Stars in the sky.jpg" style="width:100%" alt="Stars in the night sky">
          <div class="text">Our Sand Box</div>
         </div>
 
         <div class="mySlides fade">
-         <div class="numbertext">2 / 3</div>
+         <div class="numbertext">2 / 4</div>
          <img src="Images/Shuttle Launch.jpg" style="width:100%" alt="Launch of a space shuttle">
          <div class="text">Our History of Flight</div>
         </div>
 
         <div class="mySlides fade">
-         <div class="numbertext">3 / 3</div>
-         <img src="Images/Stars in the sky.jpg" style="width:100%" alt="Stars in the sky">
+         <div class="numbertext">3 / 4</div>
+         <img src="Images/Mars.jpg" style="width:100%" alt="Our goal: mars">
          <div class="text">Our Goal</div>
         </div>
+
+        <div class="mySlides fade">
+          <div class="numbertext">4 / 4</div>
+          <img src="Images/Mars close up.jpg" style="width:100%" alt="The foundation of our new home">
+          <div class="text">Our First steps to settlement</div>
+         </div>
 
          <!-- Next and previous buttons -->
          <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -52,6 +58,7 @@
        <span class="dot" onclick="currentSlide(1)"></span>
        <span class="dot" onclick="currentSlide(2)"></span>
        <span class="dot" onclick="currentSlide(3)"></span>
+       <span class="dot" onclick="currentSlide(4)"></span>
       </div>
 
     </main>
