--- a/index.html
+++ b/index.html
@@ -22,15 +22,21 @@
       <h2>Welcome to the Exodus Black!</h2>
       <div class="flex-container">
        <div class="top">
-        <p>Join us to colonize our first planet!</p>
+        <p>Join us to colonize our first planet! Mars is the first target of the exodus program.</p>
+        <p>As the closest planet with a non-deadly environment we are focusing our efforts here untill the time that teraforming becomes possible.</p>
+        <p>The contiuation of our exodus from earth needs you! Look around for more information on this once in a lifetime opportunity</p>
        </div>
 
        <div class="about">
          <p>Learn more about our ships today!</p>
+         <p>Our ships are safe, cozy, and ready for launch!</p>
+         <p>Named 1st class in space travel by the UN.</p>
        </div>
        
        <div class="tickets">
          <p>Buy your tickets now!</p>
+         <p>Limited seating for our first launch!</p>
+         <p>The time to fly is now.</p>
        </div>
       </div>
     </main>
