fixed flexbox on 1st page / added imgs

--- a/index.html
+++ b/index.html
@@ -27,17 +27,21 @@
         <p>The contiuation of our exodus from earth needs you! Look around for more information on this once in a lifetime opportunity</p>
        </div>
 
+       <img src="Images/Pathfinder on Mars.jpg" alt="Pathfinder rover on Mars" class="pathfinder">
+
        <div class="about">
-         <p>Learn more about our ships today!</p>
-         <p>Our ships are safe, cozy, and ready for launch!</p>
-         <p>Named 1st class in space travel by the UN.</p>
+         <p>Learn more about our ships today! The Exodus class line of ships are the nexest thing of the assembly!</p>
+         <p>Our ships are safe, cozy, and ready for launch! Named 1st class in space travel by the UN.</p>
        </div>
        
+       <img src="Images/Nebula_2.jpg" alt="A Nebula" class="nebula">
+
        <div class="tickets">
-         <p>Buy your tickets now!</p>
-         <p>Limited seating for our first launch!</p>
-         <p>The time to fly is now.</p>
+         <p>Buy your tickets now! Several different classes of travel!</p>
+         <p>Limited seating for our first launch! The Time to fly is now!</p>
        </div>
+
+       <img src="Images/The Galaxy.jpg" alt="Our galaxy" class="galaxy">
       </div>
     </main>
 
