2nd level media query finished.

--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
       <h2>Welcome to the Exodus Black!</h2>
       <div class="flex-container">
        <div class="top">
-        <p>Join us to colonize our first planet! Mars is the first target of the exodus program.</p>
-        <p>As the closest planet with a non-deadly environment we are focusing our efforts here untill the time that teraforming becomes possible.</p>
-        <p>The contiuation of our exodus from earth needs you! Look around for more information on this once in a lifetime opportunity</p>
+        <p>Join us to colonize our first planet! Mars is the first target of the Exodus Program.</p>
+        <p>As the closest planet with a non-deadly environment we are focusing our efforts here until the time that teraforming becomes possible.</p>
+        <p>The continuation of our exodus from Earth needs you! Look around for more information on this once in a lifetime opportunity.</p>
        </div>
 
        <img src="Images/Pathfinder on Mars.jpg" alt="Pathfinder rover on Mars" class="pathfinder">
 
        <div class="about">
-         <p>Learn more about our ships today! The Exodus class line of ships are the nexest thing of the assembly!</p>
+         <p>Learn more about our ships today! The Exodus class line of ships are the newest thing off the assembly line!</p>
          <p>Our ships are safe, cozy, and ready for launch! Named 1st class in space travel by the UN.</p>
        </div>
        
@@ -38,7 +38,7 @@
 
        <div class="tickets">
          <p>Buy your tickets now! Several different classes of travel!</p>
-         <p>Limited seating for our first launch! The Time to fly is now!</p>
+         <p>Limited seating for our first launch! The time to fly is now!</p>
        </div>
 
        <img src="Images/The Galaxy.jpg" alt="Our galaxy" class="galaxy">
