1st page media queries finished

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="flex-container">
        <div class="top">
         <p>Join us to colonize our first planet! Mars is the first target of the Exodus Program.</p>
-        <p>As the closest planet with a non-deadly environment we are focusing our efforts here until the time that teraforming becomes possible.</p>
+        <p>As the closest planet with a non-deadly environment we are focusing our efforts here until the time that terraforming becomes possible.</p>
         <p>The continuation of our exodus from Earth needs you! Look around for more information on this once in a lifetime opportunity.</p>
        </div>
 
