Full working image slideshow

--- a/tickets.html
+++ b/tickets.html
@@ -16,12 +16,22 @@
             <li><a href="C:\Users\makut\Documents\Code Louisville Project\The-Exodus-Black\about.html">About</a></li>
           </ul>
         </nav>
-        <!--<img src="Images/Stars in the sky.jpg" alt="Stars in the night sky" -->
       </header>
     
     <main>
-      <h2>Ticket Form</h2>
-        
+      <form>
+        <h2>Tickets for the Exodus Black</h2>
+        <p>Required fields are followed by <strong><abbr title="required">*</abbr></strong></p>
+         <section>
+           <p>
+             <label for="firstName">
+              <span>First Name: </span>
+              <strong><abbr title="required">*</abbr></strong>
+             </label>
+             <input type="text" id="firstName" name="firstName">
+           </p>
+         </section>
+      </form>
     </main>
 
   
