--- a/about.html
+++ b/about.html
@@ -61,6 +61,9 @@
        <span class="dot" onclick="currentSlide(4)"></span>
       </div>
 
+      <p>The Exodus program was started 2134.It started with planning and catastrophe. The first Rocket,the Pegasus, launched on November 23rd 2135. As it went into the Atmosphere a hull breach caused destabilization in the cabin. Which damaged core systems, and caused the shuttle to go into a nose dive.  </p>
+      <p>After that attempt they focused on taking the safety to the next level. The Manticore was the second rocket to leave the atmosphere on January 1st 2136. The Mission of the Manticore was to complete a full orbit around Mars and return with data.</p>
+      <p>After the success of the Manticre, their next mission was clear. A full landing on Mars. On August 12th 2136, the Gelatinous Cube flew on its mission. After months of travel it completed its mission and took full dkrt sampled back to Earth, along with some water that was found while investigating.  </p>
     </main>
 
   
