dded ticket number function

--- a/tickets.html
+++ b/tickets.html
@@ -96,6 +96,11 @@
           <input type="radio" id="scientist" name="occupation">
           </p>
         </section>
+
+        <section>
+          <button type="submit" id="submit">Submit</button>
+          <button type="reset">Reset</button>
+        </section>
       </form>
     </main>
 
