added javascript to form

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <nav>
           <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="C:\Users\makut\Documents\Code Louisville Project\The-Exodus-Black\tickets.html">Tickets</a></li>
-            <li><a href="C:\Users\makut\Documents\Code Louisville Project\The-Exodus-Black\about.html">About</a></li>
+            <li><a href="tickets.html">Tickets</a></li>
+            <li><a href="about.html">About</a></li>
           </ul>
         </nav>
       </header>
