--- a/tickets.html
+++ b/tickets.html
@@ -14,9 +14,9 @@
         <h1>Exodus Black</h1>
         <nav>
           <ul>
-            <li><a href="C:\Users\makut\Documents\Code Louisville Project\The-Exodus-Black\index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#">Tickets</a></li>
-            <li><a href="C:\Users\makut\Documents\Code Louisville Project\The-Exodus-Black\about.html">About</a></li>
+            <li><a href="about.html">About</a></li>
           </ul>
         </nav>
       </header>
@@ -98,9 +98,20 @@
         </section>
 
         <section>
+          <h3>Additional Notes:</h3>
+          <textarea id="additionalNotes" name="additionalNotes" rows="5" cols="50"></textarea>
+        </section>
+
+        <section>
           <button type="submit" id="submit">Submit</button>
           <button type="reset">Reset</button>
         </section>
+      </form>
+
+      <form>
+        <h3>Enter Ticket Number Here:</h3>
+        <input type="text" id="ticketNumb" name="ticketNumb">
+        <button type="submit" id="submit_2">Submit</button>
       </form>
     </main>
 
