--- a/about.html
+++ b/about.html
@@ -14,8 +14,8 @@
         <h1>Exodus Black</h1>
         <nav>
           <ul>
-            <li><a href="C:\Users\makut\Documents\Code Louisville Project\The-Exodus-Black\index.html">Home</a></li>
-            <li><a href="C:\Users\makut\Documents\Code Louisville Project\The-Exodus-Black\tickets.html">Tickets</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tickets.html">Tickets</a></li>
             <li><a href="#">About</a></li>
           </ul>
         </nav>
