finalized css styling

--- a/tickets.html
+++ b/tickets.html
@@ -24,7 +24,8 @@
     <main>
       <form>
         <h2>Tickets for the Exodus Black</h2>
-        <p>Required fields are followed by <strong><abbr title="required">*</abbr></strong></p>
+        <p class="field">Required fields are followed by <strong><abbr title="required">*</abbr></strong></p>
+        <p class="field">Once you have your ticket number you can check the status of the flight at the box at the bottom of the page.</p>
          <section>
            <h3>Basic Info:</h3>
            <p>
